// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS does not render an image if display is not received 1`] = `<View />`;

exports[`iOS does not render an image if ratio is not received 1`] = `<View />`;

exports[`iOS renders a caption if received 1`] = `
<View>
  <View>
    <View>
      <View>
        <Text>
          Some caption
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`iOS renders a credit if received 1`] = `
<View>
  <View>
    <View>
      <View>
        <Text>
          SOME CREDIT
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`iOS renders an image with no caption 1`] = `
<View>
  <View>
    <ModalImage
      aspectRatio={1.7777777777777777}
      uri="https://imageserver/someImage"
    />
  </View>
</View>
`;
